# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-11-17  Michael Jahn
	* load and save of extensions preferences

2009-11-10  Michael Jahn
	* updated movie plugins Allocine and FilmAffinity

2009-11-06  Michael Jahn
	* Personal Video Database import plugin added
	* fixed amazon binding (generation of signed urls added but
	  every user needs an amazon account for the access key and secret key)

2009-10-16  Michael Jahn
	* eXtreme Movie Manager import plugin added
	* import support for movie detail video codec
	* "Remover" extensions removes associated tags and languages
	  before removing the movie entry

2009-10-13  Michael Jahn
	* support for posters for import plugins GCstar and AMC
	* [#410362] AMC importer doesn't import cover pictures

2009-10-07  Michael Jahn
	* DVD Profiler import plugin added
	* very small update for AMC import plugin (medium typ)
	* import base class: support for looking up medium types and adding tags,
	  barcode, cameraman, screenplay
	* import stabilized with try-except and error message box

2009-09-30  Piotr Ożarowski
	* Change log format

2009-09-29  Michael Jahn
	* GCstar import plugin added

2009-09-26  Piotr Ożarowski
	* Display popup message during database upgrades

2009-09-25  Michael Jahn
	* Amazon movie plugin updated

2009-09-14  Piotr Ożarowski
	* Add "Remover" extension (removes selected movies)

2009-09-02  Michael Jahn
	* [#336855] Error being reported saving posters
	  cleanup of generating thumbnail versions of the images
	  and filenames for default image/thumbnail

2009-08-28  Piotr Ożarowski
	* [Bug 420462] --clean fixed

2009-08-26  Michael Jahn
	* [#418911] It doesn't import cover art from FilmAffinity

2009-08-20  Piotr Ożarowski
	* Add pool_recycle parameter in config file and set the default to 1 hour
	  (SQLAlchemy will recycle MySQL connections after given number of seconds
	  of inactivity - fixes "MySQL server has gone away" issue)
